--- a/Predictive Logistics & Coverage Report Generator/shipment_delay_prediction.ipynb
+++ b/Predictive Logistics & Coverage Report Generator/shipment_delay_prediction.ipynb
@@ -5,7 +5,7 @@
    "id": "9d8e7b0b",
    "metadata": {},
    "source": [
-    "# 📦 Shipment Delay Prediction Using ML\n",
+    "# Shipment Delay Prediction Using ML\n",
     "This notebook demonstrates how to predict shipment delays using geographical and news-based data."
    ]
   },
@@ -200,7 +200,7 @@
    "id": "08569fdd",
    "metadata": {},
    "source": [
-    "## 🌦️ Weather Data Integration using OpenWeatherMap API"
+    "##  Weather Data Integration using OpenWeatherMap API"
    ]
   },
   {
@@ -221,7 +221,7 @@
     "import requests\n",
     "\n",
     "def fetch_weather(city_name):\n",
-    "    api_key = \"YOUR_OPENWEATHERMAP_KEY\"\n",
+    "    api_key = \"OPENWEATHERMAP_KEY\"\n",
     "    endpoint = f\"http://api.openweathermap.org/data/2.5/weather?q={city_name}&appid={api_key}&units=metric\"\n",
     "\n",
     "    response = requests.get(endpoint)\n",
@@ -242,7 +242,7 @@
    "id": "205a06ec",
    "metadata": {},
    "source": [
-    "## 🚗 Traffic Delay Estimation using Google Maps API"
+    "## Traffic Delay Estimation using Google Maps API"
    ]
   },
   {
@@ -293,7 +293,7 @@
    "id": "df6f24ca",
    "metadata": {},
    "source": [
-    "## 🧠 Train ML Model to Predict Delays"
+    "##  Train ML Model to Predict Delays"
    ]
   },
   {
